syntax = "proto3";

package diode.v1;

import "validate/validate.proto";

option go_package = "github.com/netboxlabs/diode/diode-server/reconciler/v1/reconcilerpb";

// An ingestion data source
message IngestionDataSource {
  string name = 1 [(validate.rules).string = {
    min_len: 1
    max_len: 255
  }];
  string api_key = 2 [(validate.rules).string = {
    min_len: 40
    max_len: 40
  }];
}

// The request to retrieve ingestion data sources
message RetrieveIngestionDataSourcesRequest {
  string name = 1 [(validate.rules).string = {
    min_len: 1
    max_len: 255
  }];
  string sdk_name = 2 [(validate.rules).string = {
    min_len: 1
    max_len: 255
  }];
  string sdk_version = 3 [(validate.rules).string = {pattern: "^(\\d)+\\.(\\d)+\\.(\\d)+$"}];
}

// The response from the retrieve ingestion data sources request
message RetrieveIngestionDataSourcesResponse {
  repeated IngestionDataSource ingestion_data_sources = 1;
}

// Reconciler service API
service ReconcilerService {
  // Retrieves ingestion data sources
  rpc RetrieveIngestionDataSources(RetrieveIngestionDataSourcesRequest) returns (RetrieveIngestionDataSourcesResponse) {}
}
